@@ -39,6 +39,7 @@ bin
 build
 build2
 cachedir
+.jython_cache
 dist
 target
 
